--- a/Protofolio/index.html
+++ b/Protofolio/index.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>My Protofolio</title>
+</head>
+<body>
+    <header class="header">
+        <a href="#" class="logo"><span>S</span>aqlain</a>
+        <nav class="navbar">
+            <a href="#" class="active">Protofolio</a>
+            <a href="#">Services</a>
+            <a href="#">Experience</a>
+            <a href="#">Projects</a>
+            <a href="#">Education</a>
+        </nav>
 
+        <a href="#" class="contact">Contact Me</a>
+    </header>
+
+    <section class="home">
+        <div class="home-content">
+            <h3>Hi</h3>
+
+            <h1>I'm <span>Saqlain<br></span>a Web Developer</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, doloribus qui. Blanditiis excepturi, adipisci asperiores accusamus beatae dignissimos. Dolore qui ducimus harum atque fugiat, assumenda quae rem aliquam iste debitis?</p>
+            
+            <div class="btn-box">
+                <button class="btn-1">Hire Me</button>
+                <button class="btn-2">Experience</button>
+            </div>
+        </div>
+        <div class="img-box">
+            <img src="jj.jpeg" alt="">
+        </div>
+    </section>
+
+    <sevtion class="about">
+
+        <div class="about-img">
+            <img src=" alt="">
+        </div>
+
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>FrontEnd <span>Developer</span></h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex vero veritatis illo maxime ab nihil voluptatum amet est facilis quia laborum atque, dolorem suscipit excepturi velit. Dolor, repudiandae voluptate.</p>
+        <a href="#" class="btn-3">Experience</a>
+        </div>
+        </sevtion>
+
+        <section class="contact-form">
+            <h2 class="contact-me">Contact <span>Me</span></h2>
+            <form action="#">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Your Email">
+                </div>
+
+                <div class="input-box">
+                    <input type="number" placeholder="Phone Number">
+                    <input type="text" placeholder="Subject">
+                </div>
+
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message"
+                class="btn-1">  
+            </form>
+        </section>
+
+        <footer class="footer">
+            <div class="social">
+                <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+            </div>
+            <ul class="list">
+                <li>
+                    <a href="#">FAQ</a>
+                </li>
+                <li>
+                    <a href="#">Services</a>
+                </li>
+                <li>
+                    <a href="#">About Me</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+                <li>
+                    <a href="#">Privacy Policy</a>
+                </li>
+            </ul>
+
+            <p class="copyright">@ 2024 Saqlain | All Rights Reserved.</p>
+        </footer>
+
+</body>
+</html>
